--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <div class="intro">
                         <img src="images/hero.jpg" alt="profile" class="shadow-dark">
                         <h1>Hammad Khalid</h1>
-                        <p>I'm a Junior Web Developer</p>
+                        <p>I'm a Graphic Designer</p>
                         <div class="social-links">
-                            <!-- <a href="https://www.facebook.com/profile.php?id=100070897916920" target="_blank"><i class="fa fa-facebook"></i></a> -->
-                            <a href="https://www.instagram.com/hammad__.khalid" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100090383472218" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://wa.me/03265314856" target="_blank"><i class="fa fa-whatsapp"></i></a>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                                 <div class="row">
                                     <div class="about-text padd-15">
                                         <h3>I'm <span>Hammad Khalid</span></h3>
-                                        <p>As Salamu Alaikum! I am a Frontend Web Developer, and I'm very passionate and dedicated to my work. With 3 months experience as a web developer. I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
+                                        <p>As Salamu Alaikum! I am a Graphic Designer, and I'm very passionate and dedicated to my work. With 3 months experience as a Graphic Designer. I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration.</p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -112,28 +112,28 @@
                                     <div class="skills padd-15">
                                         <div class="row">
                                             <div class="skill-item padd-15">
-                                                <h5>HTML</h5>
+                                                <h5>Minimalogo</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width:70% ;"></div>
                                                     <div class="skill-percent">70%</div>
                                                 </div>
                                             </div>
                                             <div class="skill-item padd-15">
-                                                <h5>CSS</h5>
+                                                <h5>Doodle Art</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width:60% ;"></div>
                                                     <div class="skill-percent">60%</div>
                                                 </div>
                                             </div>
                                             <div class="skill-item padd-15">
-                                                <h5>JS</h5>
+                                                <h5>Mascots</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width:40% ;"></div>
                                                     <div class="skill-percent">40%</div>
                                                 </div>
                                             </div>
                                             <div class="skill-item padd-15">
-                                                <h5>Bootstrap</h5>
+                                                <h5>Sketching</h5>
                                                 <div class="progress">
                                                     <div class="progress-in" style="width:30% ;"></div>
                                                     <div class="skill-percent">30%</div>
@@ -148,14 +148,6 @@
                                         <div class="row">
                                             <div class="timeline-box padd-15">
                                                 <div class="timeline shadow-dark">
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h6 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2015 - 2018
-                                                        </h6>
-                                                        <h4 class="timeline-title">Study At Young Scholar's School</h4>
-                                                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos odio explicabo ad ut quae ea nisi expedita.</p>
-                                                    </div>
                                                     <div class="timeline-item">
                                                         <div class="circle-dot"></div>
                                                         <h6 class="timeline-date">
@@ -184,25 +176,17 @@
                                                     <div class="timeline-item">
                                                         <div class="circle-dot"></div>
                                                         <h6 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2015 - 2018
-                                                        </h6>
-                                                        <h4 class="timeline-title">Backend Developer</h4>
-                                                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos odio explicabo ad ut quae ea nisi expedita.</p>
-                                                    </div>
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h6 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2016 - 2018
-                                                        </h6>
-                                                        <h4 class="timeline-title">Frontend Developer</h4>
-                                                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos odio explicabo ad ut quae ea nisi expedita.</p>
-                                                    </div>
-                                                    <div class="timeline-item">
-                                                        <div class="circle-dot"></div>
-                                                        <h6 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2018 - 2020
+                                                            <i class="fa fa-calendar"></i> 2021 - 2022
                                                         </h6>
                                                         <h4 class="timeline-title">Microsoft Office</h4>
+                                                        <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos odio explicabo ad ut quae ea nisi expedita.</p>
+                                                    </div>
+                                                    <div class="timeline-item">
+                                                        <div class="circle-dot"></div>
+                                                        <h6 class="timeline-date">
+                                                            <i class="fa fa-calendar"></i> 2022 - 2023
+                                                        </h6>
+                                                        <h4 class="timeline-title">Graphic design</h4>
                                                         <p class="timeline-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos odio explicabo ad ut quae ea nisi expedita.</p>
                                                     </div>
                                                 </div>
@@ -289,7 +273,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>hammadkhalid0117@gmail.com</p>
+                            <p>hammadkhalid4326@gmail.com</p>
                         </div>
                     </div>
                     <div class="row">
