--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                         <h1>Hammad Khalid</h1>
                         <p>I'm a Graphic Designer</p>
                         <div class="social-links">
-                            <a href="https://www.facebook.com/profile.php?id=100090383472218" target="_blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/hammadkhalid117/" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://wa.me/03265314856" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                            <a href="https://www.behance.net/artistic_design" target="_blank"><i class="fa fa-behance"></i></a>
                         </div>
                     </div>
                 </div>
