--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>I'm a Graphic Designer</p>
                         <div class="social-links">
                             <a href="https://www.facebook.com/hammadkhalid117/" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/hammad._.khalid" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/hammad._.khalid/" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://wa.me/03265314856" target="_blank"><i class="fa fa-whatsapp"></i></a>
                             <a href="https://www.behance.net/artistic_design" target="_blank"><i class="fa fa-behance"></i></a>
                         </div>
@@ -274,7 +274,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>hammadkhalid4326@gmail.com</p>
+                            <p>hammadkhalid1177@gmail.com</p>
                         </div>
                     </div>
                     <div class="row">
