--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Artistic Design</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
             <div class="copyright-text">
@@ -53,7 +53,7 @@
                         <div class="social-links">
                             <a href="https://www.facebook.com/hammadkhalid117/" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.instagram.com/hammad._.khalid/" target="_blank"><i class="fa fa-instagram"></i></a>
-                            <a href="https://wa.me/03265314856" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                            <a href="https://wa.me/0309647908" target="_blank"><i class="fa fa-whatsapp"></i></a>
                             <a href="https://www.behance.net/artistic_design" target="_blank"><i class="fa fa-behance"></i></a>
                         </div>
                     </div>
@@ -82,16 +82,16 @@
                                                 <p>Birthday : <span>07 July 2002</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Age : <span>20</span></p>
+                                                <p>Age : <span>21</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Email : <span>info@gmail.com</span></p>
+                                                <p>Email : <span>Info@gmail.com</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>Degree : <span>Intermediate</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p>Phone : <span>+92 326 531 4856</span></p>
+                                                <p>Phone : <span>+92 309 647 0908</span></p>
                                             </div>
                                             <div class="info-item padd-15">
                                                 <p>City : <span>Faisalabad</span></p>
@@ -204,49 +204,49 @@
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Portfolio</h2>
+                            <h2>Artistic Design</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1601.jpg" alt="">
+                                    <img src="images/portfolio/Asset 1-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1602.jpg" alt="">
+                                    <img src="images/portfolio/Asset 2-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1603.jpg" alt="">
+                                    <img src="images/portfolio/Asset 3-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1604.jpg" alt="">
+                                    <img src="images/portfolio/Asset 4-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1605.jpg" alt="">
+                                    <img src="images/portfolio/Asset 5-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="porfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="images/portfolio/IMG_1606.jpg" alt="">
+                                    <img src="images/portfolio/Asset 6-100.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Call Us On</h4>
-                            <p>+92 326 531 4856</p>
+                            <p>+92 309 647 0908</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker"></i></div>
@@ -274,7 +274,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>hammadkhalid1177@gmail.com</p>
+                            <p>hammadkhalid679@gmail.com</p>
                         </div>
                     </div>
                     <div class="row">
