--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                         <h1>Hammad Khalid</h1>
                         <p>I'm a Graphic Designer</p>
                         <div class="social-links">
-                            <a href="https://www.instagram.com/hammad._.khalid/" target="_blank"><i class="fa fa-instagram"></i></a>
                             <a href="https://wa.me/0309647908" target="_blank"><i class="fa fa-whatsapp"></i></a>
+                            <a href="https://www.instagram.com/hammad._khalid/" target="_blank"><i class="fa fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -272,7 +272,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>hammadkhalid679@gmail.com</p>
+                            <p>hammadkhalid7090@gmail.com</p>
                         </div>
                     </div>
                     <div class="row">
